--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Helvetica+Neue&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: inherit;
+    line-height: inherit;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #111;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+html {
+  font-size: 16px;
+  line-height: 1.75;
+  -webkit-text-size-adjust: none;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
