--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -25,8 +25,112 @@ a {
     padding: 10px 40px;
 }
 
-.menu a{
+.menu_list {
     text-decoration: none;
-    font-weight: 380;
+    font-weight: 500;
+    
+    list-style: none;
+    
 }
+
+.menu-item{
+    padding: 5px;
+    
+    cursor: pointer;
+    border: none;
+    display: inline-block;
+}
+
+.menu-item::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 1.6px;
+    background: #000;
+    transition: width .1s; 
+}
+
+.menu-item:hover::after {
+    width: 100%;
+    /* transition: width .3s; */
+}
+
+.mobile__menu{
+    display: none;
+    font-weight: 600;
+}
+
+.tag_line{
+    height: auto;
+    min-height: 58px;
+    position: relative;
+    background: #f5f5f5;
+    white-space: nowrap;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    overflow: hidden;
+    box-shadow: inset 0 -1px 0 0 #e5e5e5;
+    text-align: center;
+}
+
+.tag_line h5{
+    font-weight: 400;
+    font-size: 1.3rem;
+    line-height: 10px;
+}
+
+.tag_line span{
+    font-size: 13px;
+}
+
+
+@media only screen and (max-width:992px){
+
+    .navigation{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.425);
+        z-index: 99;
+        display: none;
+    }
+
+    .menu_list{
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 250px;
+        height: 100%;
+        background: #fff;
+        flex-direction: column;
+        justify-content: center;
+        z-index: 100;
+        line-height: 20px;
+    }
+
+    .show__menu{
+        display: block;
+    }
+
+    .mobile__menu{
+        display: block;
+    }
+    
+}
+
+@media only screen and (max-width: 768px) {
+    .header {
+        width: 100%;
+        height: 80px;
+        line-height: 80px;
+    }
+
+    .nav__wrapper{
+        padding: 10px 16px;
+    }
+}
+
+
 
