--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -16,6 +16,27 @@ a {
     font-weight: 500;
 }
 
+.pre_header{
+    display: flex;
+    position: relative;
+    background: #f5f5f5;
+    width:100%;
+    height: 36px;
+    padding: 0px 40px;
+    font-size: 0.7rem;
+}
+
+.pre_header span{
+    padding: 10px;
+    cursor: pointer;
+}
+
+.pre_header span:hover{
+   color:  #757575;
+    
+}
+
+
 .nav__wrapper{
     background: #fff;
     position: relative;
@@ -85,6 +106,10 @@ a {
 
 
 @media only screen and (max-width:992px){
+
+    .pre_header{
+        display: none;
+    }
 
     .navigation{
         position: fixed;
