--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -39,3 +39,14 @@
     font-weight: 400;
 }
 
+.slider_button button{
+     
+       
+        height: 48px;
+        width: 48px;
+        border-radius: 24px;
+        background-color: #e5e5e5;
+        border: none;
+    transition: background-color 250ms cubic-bezier(.25, .1, .25, 1);
+}
+
