--- a/src/styles/productcard.css
+++ b/src/styles/productcard.css
@@ -2,8 +2,8 @@
     text-decoration: none;
 }
 
-.image_wrapper{
-    padding:  1rem 0;
+.product_item{
+    padding:  0.8rem;
 }
 
 .product_content div p{
@@ -17,4 +17,10 @@
     line-height: 24px;
     color: #111;
     font-weight: 400;
+}
+
+.image_wrapper img{
+    width: 100%;
+    height: 100%;
+        
 }
